deployment/phase-09-infrastructure-as-code-terraform/phase-09-terraform-basics/ec2.tf
resource "aws_instance" "app" {
  ami                    = data.aws_ssm_parameter.ubuntu_ami.value
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.app.id]

  root_block_device {
    volume_size = 30
    volume_type = "gp3"
    encrypted   = true
  }

  user_data = templatefile("${path.module}/user-data.sh.tpl", {
    db_password = var.db_password
  })

  tags = {
    Name = "launchboard-phase-14-basics"
  }
}
